# learn-opengl

./: meson.build
configuration/: meson.build  root_directory.h.in
script/: bootstrap  setup
src/: meson.build
src/1.getting_started/: meson.build
src/1.getting_started/4.2.textures_combined/: 4.2.texture.fs  textures_combined.cpp
src/2.lighting/: meson.build
subprojects/glad/: meson.build
subprojects/glad/include/glad/: glad.h
subprojects/glad/src/: glad.c
